[package]
name = "cipher-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive", "wrap_help"] }
itertools = "0.14.0"

[[bin]]
name = "cipher"
path = "src/main.rs"
